--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 			</section>
 			<section id="about">
 				<div class="frame">
-					<p class="reveal-text reveal-text-about">Currently in the first year at Les Fontenelles high school in Louviers, I am looking for an internship from (date). This would allow me to have a second professional experience in the world of web development, the first being in my secondary school internship at Océan Communication. I could make myself useful within your company, I already have skills in the web creation and I am convinced that this internship will expand my knowledge in many areas. I look forward to meeting you soon to share my motivation with you. In the meantime, best regards.</p>
+					<p class="reveal-text reveal-text-about">Currently in the first year at (school) high school in (city), I am looking for an internship from (date). This would allow me to have a second professional experience in the world of web development, the first being in my secondary school internship at (entreprise). I could make myself useful within your company, I already have skills in the web creation and I am convinced that this internship will expand my knowledge in many areas. I look forward to meeting you soon to share my motivation with you. In the meantime, best regards.</p>
 					<div class="skills">
 						<h2 class="reveal-text reveal-text-about">Compétences</h2>
 						<ul>
@@ -610,9 +610,9 @@
 			</section>
 			<section id="contact">
 				<div class="contacts">
-					<h3 class="reveal-text reveal-text-contact email">1anquetil.gabin@gmail.com</h3>
-					<h3 class="reveal-text reveal-text-contact num">07 49 55 08 13</h3>
-					<h3 class="reveal-text reveal-text-adress adress">St Étienne du Vauvray, 5 Allée des Écureuils</h3>
+					<h3 class="reveal-text reveal-text-contact email">notmyemail@gmail.com</h3>
+					<h3 class="reveal-text reveal-text-contact num">09 01 02 03 04</h3>
+					<h3 class="reveal-text reveal-text-adress adress">A good city, a good adress</h3>
 				</div>
 				<div id="contactCubeContainer" class="">
 					<div class="cube">
